# qt-karaoke

./: CMakeLists.txt  Project.qmlproject  Project.qmlproject.qtds  qds.cmake
App/: CMakeLists.txt  audiomixer.cpp  audiomixer.h  audiopassthrough.cpp  audiopassthrough.h  customaudiooutput.cpp  customaudiooutput.h  main.cpp  mediaplayer.cpp  mediaplayer.h
App/autogen/: environment.h
App/ref/: AutoTune.ino  Yin.cpp  Yin.h
Project/: CMakeLists.txt  Constants.qml  qmldir
Project/designer/: plugin.metainfo
ProjectContent/: App.qml  CMakeLists.txt  MediaPlayer  MusicControl.ui.qml  SongSelectScreen.ui.qml  StartView.ui.qml
